archived_docs/versions/v2.8/modules/en/pages/rancher-admin/experimental-features/continuous-delivery.adoc
= Continuous Delivery
:page-languages: [en, zh]
:revdate: 2024-09-26
:page-revdate: {revdate}

xref:integrations/fleet/fleet.adoc[Continuous Delivery with Fleet] comes preinstalled in Rancher and can't be fully disabled. However, the Fleet feature for GitOps continuous delivery may be disabled using the `continuous-delivery` feature flag.

To enable or disable this feature, refer to the instructions on xref:rancher-admin/experimental-features/experimental-features.adoc[the main page about enabling experimental features.]

|===
| Environment Variable Key | Default Value | Description

| `continuous-delivery`
| `true`
| This flag disables the GitOps continuous delivery feature of Fleet.
|===

If Fleet was disabled in Rancher v2.5.x, it will become enabled if Rancher is upgraded to v2.6.x. Only the continuous delivery part of Fleet can be disabled. When `continuous-delivery` is disabled, the `gitjob` deployment is no longer deployed into the Rancher server's local cluster, and `continuous-delivery` is not shown in the Rancher UI.
